1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -performCall]): Put libffi return type in
	a long long and recover it per the case (libffi bug workarounds).

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m ([HDF5CompoundType_c -packObj:to:],
	[HDF5CompoundType_c -writeLevel:]): Use PTRINT for offset (cast to id).

	* FCall.m: Include avcall.h.
	
	* Zone.m ([Zone_c -describe:]): Cast all counts to unsigned long
	and use %lu specifier.
	([Zone_c createEnd]): New variable indexOffset (avoids compiler
	warning on Irix).

	* Zone.h: Use size_t instead of unsigned for return of getPageSize.
	(Zone_c): Use size_t for all counts.

	* FCall.m (ffi_types, avcall_add_primitive): Protect per
	USE_AVCALL.
	(avcall_add_primitive): Protect per HAVE_JDK.

	* HDF5Object.m: Don't include limits.h.

1999-04-26  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* FCall.m (ffi_types): Use float for float, not double.
	([FCall_c -performCall]): Don't convert back from float to double.

1999-04-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FArguments.m, FCall.m: Moved ffi_types to FCall.

	* FCall.m: Don't declare fillHiddenArguments.
	(FUNCPTR): Use local macro instead of FFI_FN.
	(fillHiddenArguments): Add support for avcall.
	(avcall_add_primitive): New function.
	(add_ffi_types): Moved from FArguments -- now calls
	fillHiddenArguments at the right point.  Add support for avcall
	(use avcall_add_primitive).
	([FCall_c -createEnd]): Don't call fillHiddenArguments.
	([FCall_c -setMethod:inObject:], [FCall_c -createEnd]): Don't
	abort in avcall case.
	([FCall_c -performCall]): Use av_call in avcall case.

	* FArguments.m: Include avcall.h if USE_AVCALL.
	Ifdef ffi_types.
	(fcall_type_size): Make static.  Rewrite to do case/sizeof.
	([FArguments_c +createBegin:]): Ifdef ffiArgTypes and ffiReturnType
	init.  Don't abort if USE_AVCALL.
	(ADD_PRIMITIVE): This is valid for USE_AVCALL or not; don't abort
	in AVCALL case.