@@ -453,7 +453,7 @@ PHASE(Using)
 - (void)performCall
 {
 #ifndef USE_AVCALL
-  long long ret;
+  types_t ret;
 
   ffi_call (&cif, ffunction, &ret, fargs->argValues + 
             MAX_HIDDEN - fargs->hiddenArgumentCount);  
@@ -466,6 +466,51 @@ PHASE(Using)
 
   switch (fargs->returnType)
       {
+      case fcall_type_void:
+        break;
+      case fcall_type_schar:
+        // character return is broken in libffi-1.18
+        fargs->resultVal.schar = VAL(int, ret);
+        break;
+      case fcall_type_uchar:
+        // character return is broken in libffi-1.18
+        fargs->resultVal.uchar = VAL(unsigned, ret);
+        break;
+      case fcall_type_sint:
+        fargs->resultVal.sint = ret.sint;
+        break;
+      case fcall_type_uint:
+        fargs->resultVal.uint = ret.uint;
+        break;
+      case fcall_type_sshort:
+        // short return is broken in libffi-1.18
+        fargs->resultVal.sshort = VAL(int, ret);
+        break;
+      case fcall_type_ushort:
+        // short return is broken in libffi-1.18
+        fargs->resultVal.ushort = VAL(unsigned, ret);
+        break;
+      case fcall_type_slong:
+        fargs->resultVal.slong = ret.slong;
+        break;
+      case fcall_type_ulong:
+        fargs->resultVal.ulong = ret.ulong;
+        break;
+      case fcall_type_float:
+        fargs->resultVal._float = ret._float;
+        break;
+      case fcall_type_double:
+        fargs->resultVal._double = ret._double;
+        break;
+      case fcall_type_object:
+        fargs->resultVal.object = VAL(id, ret);
+        break;
+      case fcall_type_selector:
+        fargs->resultVal.selector = VAL(SEL, ret);
+        break;
+      case fcall_type_string:
+        fargs->resultVal.string = VAL(const char *, ret);
+        break;
 #ifdef HAVE_JDK
       case fcall_type_jobject:
         fargs->resultVal.object = VAL(jobject, ret);
@@ -474,51 +519,6 @@ PHASE(Using)
         fargs->resultVal.object = VAL(jstring, ret);
         break;
 #endif
-      case fcall_type_object:
-        fargs->resultVal.object = VAL(id, ret);
-        break;
-      case fcall_type_selector:
-        fargs->resultVal.selector = VAL(SEL, ret);
-        break;
-      case fcall_type_schar:
-        // character return is broken in libffi-1.18
-        fargs->resultVal.sint = VAL(int, ret);
-        break;
-      case fcall_type_uchar:
-        // character return is broken in libffi-1.18
-        fargs->resultVal.uint = VAL(unsigned int, ret);
-        break;
-      case fcall_type_sint:
-        fargs->resultVal.sint = VAL(int, ret);
-        break;
-      case fcall_type_uint:
-        fargs->resultVal.uint = VAL(unsigned int, ret);
-        break;
-      case fcall_type_sshort:
-        // short return is broken in libffi-1.18
-        fargs->resultVal.sshort = VAL(int, ret);
-        break;
-      case fcall_type_ushort:
-        // short return is broken in libffi-1.18
-        fargs->resultVal.ushort = VAL(unsigned int, ret);
-        break;
-      case fcall_type_slong:
-        fargs->resultVal.slong = VAL(long, ret);
-        break;
-      case fcall_type_ulong:
-        fargs->resultVal.ulong = VAL(unsigned long, ret);
-        break;
-      case fcall_type_float:
-        fargs->resultVal._float = VAL(float, ret);
-        break;
-      case fcall_type_double:
-        fargs->resultVal._double = VAL(double, ret);
-        break;
-      case fcall_type_string:
-        fargs->resultVal.string = VAL(const char *, ret);
-        break;
-      case fcall_type_void:
-        break;
       default:
         abort ();
       }
